--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -10,10 +10,10 @@ pipeline {
     }
 
     environment {
-        DEV_PROJECT = "youruser-movies-dev"
-        STAGE_PROJECT = "youruser-movies-stage"
-        APP_GIT_URL = "https://github.com/youruser/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/java"
+        DEV_PROJECT = "john-albert-herrick-ibm-com-movies-dev"
+        STAGE_PROJECT = "john-albert-herrick-ibm-com-movies-stage"
+        APP_GIT_URL = "https://github.com/JHerrickII/DO288-apps"
+        NEXUS_SERVER = "http://source /usr/local/etc/ocp4.config/repository/java"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "movies"
